k8s/deployment.yaml
# Generated by CloudMind
apiVersion: apps/v1
kind: Deployment
metadata:
  name: via-vai-app
  namespace: cloudmind-staging
  labels:
    app.kubernetes.io/name: via-vai
    app.kubernetes.io/component: app
    app.kubernetes.io/managed-by: cloudmind
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: via-vai
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: via-vai
        app.kubernetes.io/component: app
    spec:
      containers:
        - name: app
          image: ghcr.io/Hedi808/via-vai-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
